Actually fix mobile spacing

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -60,11 +60,11 @@ body {
     //padding: 1rem 1rem;
 }
 
-@media (max-width: 768px) {
-    .site-content {
-        padding: 1.3rem 1rem;
-    }
-}
+//@media (max-width: 768px) {
+//    .site-content {
+//        padding: 1.3rem 1rem;
+//    }
+//}
 
 /* Call to Action Section */
 .call-to-action {
